fix code readability

--- a/styles/hookah.css
+++ b/styles/hookah.css
@@ -1,17 +1,14 @@
-.handler
-{
-   position: absolute;
-   top: 0;
-   left: 0;
+.handler {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-.besties-handler
-{
+.besties-handler {
     margin-top: 81px;
 }
 
-.article-container
-{
+.article-container {
     background-color: #151515;
     display: flex;
     flex-direction: row;
@@ -20,26 +17,23 @@
     margin-bottom: 12px;
 }
 
-.right-arrow-container
-{
+.right-arrow-container {
     margin-right: 150px;
 }
 
-.left-arrow-container
-{
+.left-arrow-container {
     margin-left: 150px;
 }
 
-.article-handler
-{
-    font-family: 'Roboto-Light';
+.article-handler {
+    font-family: "Roboto-Light";
     font-style: normal;
     font-weight: 300;
     font-size: 36px;
     line-height: 42px;
     letter-spacing: 0.04em;
-    color: #FFFFFF;
-    text-shadow: 0px 4px 4px #6E9F57;
+    color: #ffffff;
+    text-shadow: 0px 4px 4px #6e9f57;
     margin-inline: 138px;
 }
 
@@ -116,19 +110,19 @@
 }
 
 .element.orange {
-    background: url('../assets/hookas/-Orange-hookah.svg') 45% 0 no-repeat;
+    background: url("../assets/hookas/-Orange-hookah.svg") 45% 0 no-repeat;
     border-radius: 20px;
     background-size: cover;
 }
 
 .element.pomegranate {
-    background: url('../assets/hookas/-Pomegranate-hookah.svg') 45% 0 no-repeat;
+    background: url("../assets/hookas/-Pomegranate-hookah.svg") 45% 0 no-repeat;
     border-radius: 20px;
     background-size: cover;
 }
 
 .element.sea-buckthorn {
-    background: url('../assets/hookas/-Sea-buckthorn-hookah.svg') 45% 0 no-repeat;
+    background: url("../assets/hookas/-Sea-buckthorn-hookah.svg") 45% 0 no-repeat;
     border-radius: 20px;
     background-size: cover;
 }
@@ -138,9 +132,7 @@
 }
 
 @media all and (max-width: 1070px) {
-
-    .article-container
-    {
+    .article-container {
         background-color: #151515;
         position: relative;
         z-index: 10;
@@ -150,68 +142,60 @@
         margin-bottom: 36px;
     }
 
-    .right-arrow-container
-    {
+    .right-arrow-container {
         margin-right: auto;
     }
 
-    .left-arrow-container
-    {
+    .left-arrow-container {
         margin-left: auto;
     }
 
-    .article-handler
-    {
-        font-family: 'Roboto-Light';
+    .article-handler {
+        font-family: "Roboto-Light";
         font-style: normal;
         font-weight: 300;
         font-size: 36px;
         line-height: 42px;
         letter-spacing: 0.04em;
-        color: #FFFFFF;
-        text-shadow: 0px 4px 4px #6E9F57;
+        color: #ffffff;
+        text-shadow: 0px 4px 4px #6e9f57;
     }
 }
 
 @media all and (min-width: 900px) {
-
-    .article-handler
-    {
-        font-family: 'Roboto-Light';
+    .article-handler {
+        font-family: "Roboto-Light";
         font-style: normal;
         font-weight: 300;
         font-size: 36px;
         line-height: 42px;
         letter-spacing: 0.04em;
-        color: #FFFFFF;
-        text-shadow: 0px 4px 4px #6E9F57;
+        color: #ffffff;
+        text-shadow: 0px 4px 4px #6e9f57;
         margin-inline: 35px;
     }
 
-    .right-arrow-container
-    {
+    .right-arrow-container {
         margin-right: auto;
     }
 
-    .left-arrow-container
-    {
+    .left-arrow-container {
         margin-left: auto;
     }
 
-    .article-handler
-    {
-        font-family: 'Roboto-Light';
+    .article-handler {
+        font-family: "Roboto-Light";
         font-style: normal;
         font-weight: 300;
         font-size: 36px;
         line-height: 42px;
         letter-spacing: 0.04em;
-        color: #FFFFFF;
-        text-shadow: 0px 4px 4px #6E9F57;
+        color: #ffffff;
+        text-shadow: 0px 4px 4px #6e9f57;
         margin-inline: 138px;
     }
 
-    .area{
+    .area {
         max-width: 890px;
     }
 
@@ -238,8 +222,7 @@
 }
 
 @media all and (max-width: 660px) {
-
-    .area{
+    .area {
         max-width: 335px;
     }
 
@@ -265,30 +248,24 @@
 }
 
 @media all and (max-width: 415px) {
-
-    .area
-    {
+    .area {
         max-width: 200px;
     }
 
-    .article-container
-    {
+    .article-container {
         justify-content: center;
     }
 
-    .article-handler
-    {
+    .article-handler {
         font-size: 24px;
         margin: 0;
     }
 
-    .right-arrow-container
-    {
+    .right-arrow-container {
         margin: 0;
     }
 
-    .left-arrow-container
-    {
+    .left-arrow-container {
         margin: 0;
     }
 }
@@ -333,7 +310,7 @@
     }
 }
 
-.circles{
+.circles {
     position: absolute;
     top: 0;
     left: 0;
@@ -342,26 +319,24 @@
     overflow: hidden;
 }
 
-.circles li{
+.circles li {
     position: absolute;
     display: block;
     list-style: none;
-    background: url('../assets/common/logo.png') no-repeat; /* Замените путь на путь к вашему логотипу */
+    background: url("../assets/common/logo.png") no-repeat; /* Замените путь на путь к вашему логотипу */
     background-size: contain; /* Это обеспечит масштабирование фона внутри элемента */
     animation: animate 25s linear infinite;
     bottom: -150px; /* Подстраивайте это значение под ваши требования */
 }
 
-
-.circles li:nth-child(1){
+.circles li:nth-child(1) {
     left: 25%;
     width: 80px;
     height: 80px;
     animation-delay: 0s;
 }
 
-
-.circles li:nth-child(2){
+.circles li:nth-child(2) {
     left: 10%;
     width: 20px;
     height: 20px;
@@ -369,14 +344,14 @@
     animation-duration: 12s;
 }
 
-.circles li:nth-child(3){
+.circles li:nth-child(3) {
     left: 70%;
     width: 20px;
     height: 20px;
     animation-delay: 4s;
 }
 
-.circles li:nth-child(4){
+.circles li:nth-child(4) {
     left: 40%;
     width: 60px;
     height: 60px;
@@ -384,28 +359,28 @@
     animation-duration: 18s;
 }
 
-.circles li:nth-child(5){
+.circles li:nth-child(5) {
     left: 65%;
     width: 20px;
     height: 20px;
     animation-delay: 0s;
 }
 
-.circles li:nth-child(6){
+.circles li:nth-child(6) {
     left: 75%;
     width: 110px;
     height: 110px;
     animation-delay: 3s;
 }
 
-.circles li:nth-child(7){
+.circles li:nth-child(7) {
     left: 35%;
     width: 150px;
     height: 150px;
     animation-delay: 7s;
 }
 
-.circles li:nth-child(8){
+.circles li:nth-child(8) {
     left: 50%;
     width: 25px;
     height: 25px;
@@ -413,7 +388,7 @@
     animation-duration: 45s;
 }
 
-.circles li:nth-child(9){
+.circles li:nth-child(9) {
     left: 20%;
     width: 15px;
     height: 15px;
@@ -421,7 +396,7 @@
     animation-duration: 35s;
 }
 
-.circles li:nth-child(10){
+.circles li:nth-child(10) {
     left: 85%;
     width: 150px;
     height: 150px;
@@ -430,18 +405,16 @@
 }
 
 @keyframes animate {
-
-    0%{
+    0% {
         transform: translateY(0);
         opacity: 1;
         border-radius: 0;
     }
 
-    100%{
+    100% {
         transform: translateY(-1000px) rotate(720deg);
         opacity: 0;
     }
-
 }
 
 .element.loyalty-system {
@@ -462,11 +435,10 @@
     background-size: cover;
 }
 
-.card-article-container
-{
+.card-article-container {
     display: flex;
     justify-content: center;
-    font-family: 'Pricedown';
+    font-family: "Pricedown";
     font-size: 24px;
     margin-top: 36px;
 }
@@ -487,7 +459,7 @@
 .text-container {
     position: absolute;
     top: 50%;
-    font-family: 'Roboto-Light';
+    font-family: "Roboto-Light";
     font-weight: 300;
     font-size: 18px;
     bottom: 0;
